src/bindings.rs

extern "C" {
    pub fn fstReaderGetCurrentFlatScope(
        ctx: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn fstReaderGetCurrentScopeUserInfo(
        ctx: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn fstReaderGetCurrentScopeLen(ctx: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fstReaderGetDateString(
        ctx: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn fstReaderGetDoubleEndianMatchState(
        ctx: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fstReaderGetDumpActivityChangeTime(ctx: *mut ::std::os::raw::c_void, idx: u32) -> u64;
}
extern "C" {
    pub fn fstReaderGetDumpActivityChangeValue(
        ctx: *mut ::std::os::raw::c_void,
        idx: u32,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn fstReaderGetEndTime(ctx: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn fstReaderGetFacProcessMask(
        ctx: *mut ::std::os::raw::c_void,
        facidx: fstHandle,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fstReaderGetFileType(ctx: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fstReaderGetFseekFailed(ctx: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fstReaderGetMaxHandle(ctx: *mut ::std::os::raw::c_void) -> fstHandle;
}
extern "C" {
    pub fn fstReaderGetMemoryUsedByWriter(ctx: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn fstReaderGetNumberDumpActivityChanges(ctx: *mut ::std::os::raw::c_void) -> u32;
}
extern "C" {
    pub fn fstReaderGetScopeCount(ctx: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn fstReaderGetStartTime(ctx: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn fstReaderGetTimescale(ctx: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_schar;
}
extern "C" {
    pub fn fstReaderGetTimezero(ctx: *mut ::std::os::raw::c_void) -> i64;
}
extern "C" {
    pub fn fstReaderGetValueChangeSectionCount(ctx: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn fstReaderGetValueFromHandleAtTime(
        ctx: *mut ::std::os::raw::c_void,
        tim: u64,
        facidx: fstHandle,
        buf: *mut ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn fstReaderGetVarCount(ctx: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn fstReaderGetVersionString(
        ctx: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn fstReaderIterateHier(ctx: *mut ::std::os::raw::c_void) -> *mut fstHier;
}
extern "C" {
    pub fn fstReaderIterateHierRewind(ctx: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fstReaderIterBlocks(
        ctx: *mut ::std::os::raw::c_void,
        value_change_callback: ::std::option::Option<
            unsafe extern "C" fn(
                user_callback_data_pointer: *mut ::std::os::raw::c_void,
                time: u64,
                facidx: fstHandle,
                value: *const ::std::os::raw::c_uchar,
            ),
        >,
        user_callback_data_pointer: *mut ::std::os::raw::c_void,
        vcdhandle: *mut FILE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fstReaderIterBlocks2(
        ctx: *mut ::std::os::raw::c_void,
        value_change_callback: ::std::option::Option<
            unsafe extern "C" fn(
                user_callback_data_pointer: *mut ::std::os::raw::c_void,
                time: u64,
                facidx: fstHandle,
                value: *const ::std::os::raw::c_uchar,
            ),
        >,
        value_change_callback_varlen: ::std::option::Option<
            unsafe extern "C" fn(
                user_callback_data_pointer: *mut ::std::os::raw::c_void,
                time: u64,
                facidx: fstHandle,
                value: *const ::std::os::raw::c_uchar,
                len: u32,
            ),
        >,
        user_callback_data_pointer: *mut ::std::os::raw::c_void,
        vcdhandle: *mut FILE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fstReaderIterBlocksSetNativeDoublesOnCallback(
        ctx: *mut ::std::os::raw::c_void,
        enable: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn fstReaderOpen(nam: *const ::std::os::raw::c_char) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn fstReaderOpenForUtilitiesOnly() -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn fstReaderPopScope(ctx: *mut ::std::os::raw::c_void) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn fstReaderProcessHier(
        ctx: *mut ::std::os::raw::c_void,
        vcdhandle: *mut FILE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fstReaderPushScope(
        ctx: *mut ::std::os::raw::c_void,
        nam: *const ::std::os::raw::c_char,
        user_info: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn fstReaderResetScope(ctx: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn fstReaderSetFacProcessMask(ctx: *mut ::std::os::raw::c_void, facidx: fstHandle);
}
extern "C" {
    pub fn fstReaderSetFacProcessMaskAll(ctx: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn fstReaderSetLimitTimeRange(
        ctx: *mut ::std::os::raw::c_void,
        start_time: u64,
        end_time: u64,
    );
}
extern "C" {
    pub fn fstReaderSetUnlimitedTimeRange(ctx: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn fstReaderSetVcdExtensions(
        ctx: *mut ::std::os::raw::c_void,
        enable: ::std::os::raw::c_int,
    );
}
